--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,6 +11,18 @@ events {
 http {
     include '_GBC_CORE_ROOT_/bin/openresty/nginx/conf/mime.types';
 
+    #跨域
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Headers X-Requested-With;
+    add_header Access-Control-Allow-Methods GET,POST,OPTIONS;
+
+    resolver 8.8.8.8;
+
+    #tcp 控制
+    tcp_nodelay on;
+    tcp_nopush on;
+
+
     # logs
     log_format compression '$remote_addr - $remote_user [$time_local] '
                         '"$request" $status $bytes_sent '
@@ -38,24 +50,53 @@ http {
     lua_socket_log_errors off;
     lua_package_path '_GBC_CORE_ROOT_/src/?.lua;;';
     lua_shared_dict _GBC_ 1024k;
+
+    lua_shared_dict sdLogin 40m; #登陆用户锁定
+    lua_shared_dict sdCtrl 1m; #登陆用户数统计
+    lua_shared_dict sdDBEvent 50m; #数据库消息
+    lua_shared_dict sdLockRoom 20m; #锁定房间
+
+    lua_max_pending_timers 2048; #等待中的timer, 如果等待的太多，ngx.timer.at会直接返回了
+    lua_max_running_timers 30960;
+
     lua_code_cache off;
 
+    lua_socket_keepalive_timeout 10000s;
+    lua_socket_pool_size 10000;
+
     init_by_lua '
+        require "protobuf"
+        require("framework.init")
 
-require("framework.init")
+        local appKeys = dofile("_GBC_CORE_ROOT_/tmp/app_keys.lua")
+        local globalConfig = dofile("_GBC_CORE_ROOT_/tmp/config.lua")
 
-local appKeys = dofile("_GBC_CORE_ROOT_/tmp/app_keys.lua")
-local globalConfig = dofile("_GBC_CORE_ROOT_/tmp/config.lua")
+        cc.DEBUG = globalConfig.DEBUG
+        cc.exports.GConfig = globalConfig
+        cc.exports.GAppKeys = appKeys
 
-cc.DEBUG = globalConfig.DEBUG
+        local gbc = cc.import("#gbc")
+        cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
+        --cc.printinfo("init_by_lua")
+    ';
 
-local gbc = cc.import("#gbc")
-cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
+    init_worker_by_lua '
+        local worker = cc.import("#worker")
+        worker:new():runapp()
+        cc.disableGlobal()
+    ';
 
-';
+    #限制所有IP 连接数处理数度
+    #limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
+    #并发连接数限制
+    limit_conn_zone $binary_remote_addr zone=allipmax:30m;
 
     server {
+        #limit_req zone=allipspeed burst=1 nodelay;
+        limit_conn allipmax 10000;
+
         listen 8088 so_keepalive=on;
+        # listen 8088 so_keepalive=1s:1s:5;
 
         location = /nginx_status {
             stub_status;
