--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,7 +5,7 @@ error_log _GBC_CORE_ROOT_/logs/nginx-error.log;
 pid _GBC_CORE_ROOT_/tmp/nginx.pid;
 
 events {
-    worker_connections 256;
+    worker_connections 65535;
 }
 
 http {
@@ -59,7 +59,7 @@ http {
     lua_max_pending_timers 2048; #等待中的timer, 如果等待的太多，ngx.timer.at会直接返回了
     lua_max_running_timers 30960;
 
-    lua_code_cache off;
+    lua_code_cache on;
 
     lua_socket_keepalive_timeout 10000s;
     lua_socket_pool_size 10000;
