增加多开nginx程序

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -148,8 +148,8 @@ command=_GBC_CORE_ROOT_/bin/beanstalkd/bin/beanstalkd -l 127.0.0.1 -p _BEANSTALK
 [program:redis]
 command=_GBC_CORE_ROOT_/bin/redis/bin/redis-server _GBC_CORE_ROOT_/tmp/redis.conf
 
-[program:nginx]
-command=_GBC_CORE_ROOT_/bin/openresty/nginx/sbin/nginx -c _GBC_CORE_ROOT_/tmp/nginx.conf
+;all nginx
+;_NGINX_
 
 ;all workers
 ;_WORKERS_
