--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -48,7 +48,7 @@ http {
     # lua
     lua_check_client_abort on;
     lua_socket_log_errors off;
-    lua_package_path '_GBC_CORE_ROOT_/src/?.lua;;';
+    lua_package_path '_GBC_CORE_ROOT_/src/?.lua;_GBC_CORE_ROOT_/apps/?.lua;_GBC_CORE_ROOT_/src/lib/?.lua;;';
     lua_shared_dict _GBC_ 1024k;
 
     lua_shared_dict sdLogin 40m; #登陆用户锁定
