增加定时器任务

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -52,6 +52,7 @@ http {
     lua_shared_dict _GBC_ 1024k;
 
     lua_shared_dict sdDBEvent 50m; #数据库消息
+    lua_shared_dict sdSIG 1m; #服务信号控制库
 
     lua_max_pending_timers 2048; #等待中的timer, 如果等待的太多，ngx.timer.at会直接返回了
     lua_max_running_timers 30960;
