--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -147,6 +147,7 @@ command=_GBC_CORE_ROOT_/bin/beanstalkd/bin/beanstalkd -l 127.0.0.1 -p _BEANSTALK
 
 [program:redis]
 command=_GBC_CORE_ROOT_/bin/redis/bin/redis-server _GBC_CORE_ROOT_/tmp/redis.conf
+stdout_logfile=_GBC_CORE_ROOT_/logs/redis.log ;
 
 ;all nginx
 ;_NGINX_
