增加sqlite读取配置

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -22,7 +22,6 @@ http {
     tcp_nodelay on;
     tcp_nopush on;
 
-
     # logs
     log_format compression '$remote_addr - $remote_user [$time_local] '
                         '"$request" $status $bytes_sent '
@@ -52,6 +51,7 @@ http {
     lua_shared_dict _GBC_ 1024k;
 
     lua_shared_dict sdDBEvent 50m; #数据库消息
+    lua_shared_dict sdLogin 50m; #数据库消息
     lua_shared_dict sdSIG 1m; #服务信号控制库
 
     lua_max_pending_timers 2048; #等待中的timer, 如果等待的太多，ngx.timer.at会直接返回了
@@ -66,16 +66,17 @@ http {
         require "protobuf"
         require("framework.init")
 
+
         local appKeys = dofile("_GBC_CORE_ROOT_/tmp/app_keys_NGX_INDEX_.lua")
         local globalConfig = dofile("_GBC_CORE_ROOT_/tmp/config.lua")
 
         cc.DEBUG = globalConfig.DEBUG
-        cc.exports.GConfig = globalConfig
-        cc.exports.GAppKeys = appKeys
+        cc.GConfig = globalConfig
+        cc.GAppKeys = appKeys
+        cc.sqlite_database = "_GBC_CORE_ROOT_/conf/config.db";
 
         local gbc = cc.import("#gbc")
         cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
-        --cc.printinfo("init_by_lua")
     ';
 
     init_worker_by_lua '
