--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -73,7 +73,8 @@ http {
         cc.DEBUG = globalConfig.DEBUG
         cc.GConfig = globalConfig
         cc.GAppKeys = appKeys
-        cc.sqlite_database = "_GBC_CORE_ROOT_/conf/config.db";
+        cc.sqlite_file= "_GBC_CORE_ROOT_/conf/config.db";
+        cc.pb_file = "_GBC_CORE_ROOT_/src/packages/protos/protos.pb";
 
         local gbc = cc.import("#gbc")
         cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
