--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -95,8 +95,7 @@ http {
         #limit_req zone=allipspeed burst=1 nodelay;
         limit_conn allipmax 10000;
 
-        listen 8088 so_keepalive=on;
-        # listen 8088 so_keepalive=1s:1s:5;
+        listen 8088 _SO_KEEPALIVE_;
 
         location = /nginx_status {
             stub_status;
