--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -63,6 +63,7 @@ http {
     lua_socket_keepalive_timeout 10000s;
     lua_socket_pool_size 10000;
 
+    #初始化整个lua环境
     init_by_lua '
         require "protobuf"
         require("framework.init")
@@ -81,6 +82,7 @@ http {
         cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
     ';
 
+    #初始化各个worker, 启动初始化，和创建timer
     init_worker_by_lua '
         cc.disableGlobal()
         local worker = cc.import("#worker")
