--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -92,11 +92,11 @@ http {
     #限制所有IP 连接数处理数度
     #limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
     #并发连接数限制
-    limit_conn_zone $binary_remote_addr zone=allipmax:30m;
+    limit_conn_zone $binary_remote_addr zone=perip:30m;
 
     server {
         #limit_req zone=allipspeed burst=1 nodelay;
-        limit_conn allipmax 10000;
+        limit_conn perip 100;
 
         listen 8088 _SO_KEEPALIVE_;
 
