--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 
 daemon off; # control by supervisord
 worker_processes 4;
-error_log _GBC_CORE_ROOT_/logs/nginx-error_NGX_INDEX_.log info;
+error_log _GBC_CORE_ROOT_/logs/nginx-error_NGX_INDEX_.log notice;
 pid _GBC_CORE_ROOT_/tmp/nginx_NGX_INDEX_.pid;
 
 events {
