--- a/apps/website/conf/app_entry.conf
+++ b/apps/website/conf/app_entry.conf
@@ -1,7 +1,11 @@
 
-location / {
-    root '_APP_ROOT_/public_html';
+location /web/ {
+    root '_APP_ROOT_/public/';
     index index.html;
+}
+
+location /download/ {
+    root '_APP_ROOT_/public/';
 }
 
 location /website/ {
