--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -98,7 +98,8 @@ http {
         #limit_req zone=allipspeed burst=1 nodelay;
         limit_conn perip 100;
 
-        listen 8088 _SO_KEEPALIVE_;
+        listen _PORT_ _SO_KEEPALIVE_;
+        listen [::]:_PORT_ _SO_KEEPALIVE_ ipv6only=on;
 
         location = /nginx_status {
             stub_status;
