--- a/apps/website/conf/app_entry.conf
+++ b/apps/website/conf/app_entry.conf
@@ -2,12 +2,30 @@
 location /web/ {
     root '_APP_ROOT_/public/';
     index index.html;
+
+    auth_basic "Restricted";	#访问权限类型
+    auth_basic_user_file '_APP_ROOT_/public/auth.conf';
 }
 
 location /download/ {
-    root '_APP_ROOT_/public/';
+	root '_APP_ROOT_/public/';
 }
 
+location /cdkey/ {
+	if ($request_filename ~* ^.*?\.(txt|key)$){
+        add_header Content-disposition "attachment";
+	}
+	root '_APP_ROOT_/public/';
+    auth_basic "Restricted";	#访问权限类型
+    auth_basic_user_file '_APP_ROOT_/public/auth.conf';
+    autoindex on;
+    autoindex_exact_size  off; 
+}
+
+
 location /website/ {
+    auth_basic "Restricted";	#访问权限类型
+    auth_basic_user_file '_APP_ROOT_/public/auth.conf';
+
     content_by_lua 'nginxBootstrap:runapp("_APP_ROOT_")';
 }
