--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,4 @@
-
+user root;
 daemon off; # control by supervisord
 worker_processes 4;
 error_log _GBC_CORE_ROOT_/logs/nginx-error_NGX_INDEX_.log notice;
