--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -90,12 +90,12 @@ http {
     ';
 
     #限制所有IP 连接数处理数度
-    #limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
+    limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
     #并发连接数限制
     limit_conn_zone $binary_remote_addr zone=perip:30m;
 
     server {
-        #limit_req zone=allipspeed burst=100 nodelay;
+        limit_req zone=allipspeed burst=10 nodelay;
         limit_conn perip 100;
 
         listen _PORT_ _SO_KEEPALIVE_;
