--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -94,6 +94,11 @@ http {
     #并发连接数限制
     limit_conn_zone $binary_remote_addr zone=perip:30m;
 
+    geo $white_ip{
+        default 1;
+        127.0.0.1/24 0;
+    }
+
     server {
         limit_req zone=allipspeed burst=10 nodelay;
         limit_conn perip 100;
