--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -93,6 +93,7 @@ http {
     limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
     #并发连接数限制
     limit_conn_zone $binary_remote_addr zone=perip:30m;
+    limit_req_log_level warn;
 
     server {
         limit_req zone=allipspeed burst=10 nodelay;
