--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -89,6 +89,16 @@ http {
         worker:new():runapp()
     ';
 
+    geo $whiteiplist{
+        default 1;
+        127.0.0.1/32 0;
+    }
+
+    map $whiteiplist $limitlist{
+        1 $binary_remote_addr;
+        0 "";
+    }
+
     #限制所有IP 连接数处理数度
     limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
     #并发连接数限制
