--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -101,7 +101,7 @@ http {
     }
 
     #限制所有IP 连接数处理数度
-    limit_req_zone $binary_remote_addr zone=allipspeed:30m rate=3r/s;
+    limit_req_zone $limitlist zone=allipspeed:30m rate=3r/s;
     #并发连接数限制
     limit_conn_zone $binary_remote_addr zone=perip:30m;
     limit_req_log_level warn;
