--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -47,7 +47,7 @@ http {
 
     # lua
     lua_check_client_abort on;
-    lua_socket_log_errors off;
+    lua_socket_log_errors on;
     lua_package_path '_GBC_CORE_ROOT_/src/?.lua;_GBC_CORE_ROOT_/apps/?.lua;_GBC_CORE_ROOT_/src/lib/?.lua;;';
     lua_shared_dict _GBC_ 1024k;
 
