--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -113,9 +113,10 @@ http {
         listen [::]:_PORT_ _SO_KEEPALIVE_ ipv6only=on;
 
         location = /nginx_status {
-            stub_status;
+            stub_status on;
             access_log off;
             allow 127.0.0.1;
+            allow 119.137.0.1/16;
             deny all;
         }
 
