--- a/apps/update/conf/app_entry.conf
+++ b/apps/update/conf/app_entry.conf
@@ -3,5 +3,5 @@ location /download/ {
 }
 
 location /update/ {
-    content_by_lua 'nginxBootstrap:runapp("_APP_ROOT_")';
+    content_by_lua 'nginxBootstrap:runapp("_APP_NAME_")';
 }
