--- a/apps/website/conf/app_entry.conf
+++ b/apps/website/conf/app_entry.conf
@@ -22,5 +22,5 @@ location /cdkey/ {
 location /website/ {
     auth_basic "Restricted";	#访问权限类型
     auth_basic_user_file '_APP_ROOT_/public/auth.conf';
-    content_by_lua 'nginxBootstrap:runapp("_APP_ROOT_")';
+    content_by_lua 'nginxBootstrap:runapp("_APP_NAME_")';
 }
