--- a/apps/Gate/conf/app_entry.conf
+++ b/apps/Gate/conf/app_entry.conf
@@ -1,4 +1,4 @@
 
 location /Gate/ {
-    content_by_lua 'nginxBootstrap:runapp("_APP_ROOT_")';
+    content_by_lua 'nginxBootstrap:runapp("_APP_NAME_")';
 }
